tweaking disqus comments and enabling plausible

--- a/themes/ghostwriter/layouts/_default/single.html
+++ b/themes/ghostwriter/layouts/_default/single.html
@@ -1,4 +1,5 @@
 {{ partial "header.html" . }}
+{{ partial "plausible_head.html" . }}
 
 <div class="container">
     <article class="post-container">
