--- a/themes/ghostwriter/layouts/index.html
+++ b/themes/ghostwriter/layouts/index.html
@@ -1,4 +1,5 @@
 {{ partial "header.html" . }}
+{{ partial "plausible_head.html" . }}
 
 <div id="post-index" class="container" itemscope="" itemtype="https://schema.org/Blog">
     {{ partial "intro.html" . }}
