--- a/themes/ghostwriter/layouts/_default/list.html
+++ b/themes/ghostwriter/layouts/_default/list.html
@@ -1,4 +1,5 @@
 {{ partial "header.html" . }}
+{{ partial "plausible_head.html" . }}
 
 <div id="post-index" class="container">
     {{ partial "intro.html" . }}
