--- a/themes/ghostwriter/layouts/partials/header.html
+++ b/themes/ghostwriter/layouts/partials/header.html
@@ -21,7 +21,7 @@
         {{ partial "extra-in-head.html" . }}
         {{ partial "exponea.html" . }}
         {{ partial "fathom.html" . }}
-        {{ partial "plausible.html" . }}
+        {{ partial "plausible_head.html" . }}
     </head>
     <body>
         {{ template "_internal/google_analytics.html" . }}
